# SoftEngine

./: .gitmodules  CMakeLists.txt
SoftEngineCore/: CMakeLists.txt
SoftEngineCore/includes/SoftEngineCore/: Application.hpp  Camera.hpp  Event.hpp  Input.hpp  Keys.hpp  Log.hpp
SoftEngineCore/includes/SoftEngineCore/Utils/: test.hpp
SoftEngineCore/src/SoftEngineCore/: Application.cpp  Camera.cpp  Input.cpp  Window.cpp  Window.hpp
SoftEngineCore/src/SoftEngineCore/Modules/: UIModule.cpp  UIModule.hpp
SoftEngineCore/src/SoftEngineCore/Rendering/OpenGL/: IndexBuffer.cpp  IndexBuffer.hpp  Renderer_OpenGL.cpp  Renderer_OpenGL.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture2D.cpp  Texture2D.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
SoftEngineCore/src/SoftEngineCore/Utils/: test.cpp
SoftEngineEditor/: CMakeLists.txt
SoftEngineEditor/src/: main.cpp
